--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,39 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  height: 100%;
+}
+html {
+  height: 100%;
+}
+
+#root {
+  height: 100%;
+  position: relative;
+  z-index: 2;
+}
+.background {
+  position: fixed;
+  top: -100%;
+  left: -100%;
+  height: 500%;
+  width: 500%;
+  z-index: -1;
+  background: url(questionmark.svg) repeat;
+  background-size: 1%;
+  background-position-x: 20px;
+  opacity: 0.08;
+  animation: moving infinite 10s linear;
+}
+
+@keyframes moving {
+  0% {
+    transform: rotate(30deg);
+  }
+  50% {
+    transform: translate(300px) rotate(30deg);
+  }
+  100% {
+    transform: rotate(30deg);
+  }
 }
